...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="reverseWords" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4UK-QF-NYc">
                                                        <rect key="frame" x="0.0" y="0.0" width="306.66666666666669" height="60"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="inputTextField">
                                                            <accessibilityTraits key="traits" none="YES"/>
                                                        </accessibility>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEp-Cs-e32">
                                                        <rect key="frame" x="0.0" y="91" width="306.66666666666669" height="0.0"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                        <color key="textColor" systemColor="systemBlueColor"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All characters exept alphabetic  symbols" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO"
                                                <rect key="frame" x="0.0" y="0.0" width="343" height="20.333333333333332"/>
                                                <accessibility key="accessibilityConfiguration" identifier="rulesDescriptionLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
...
                                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Eyr-yB-EXp">
                                                <rect key="frame" x="0.0" y="36.333333333333371" width="343" height="0.0"/>
                                                <accessibility key="accessibilityConfiguration" identifier="textToIgnoreTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                                <rect key="frame" x="0.0" y="115.33333333333337" width="343" height="56"/>
                                                <color key="backgroundColor" red="0.0" green="0.47843137254901963" blue="1" alpha="0.60429786530551532" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="actionButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="56" id="7IU-6h-bp1"/>
...
